# node-webrtc

./: .clang-tidy  .doxygen.txt  .eslintrc  .gitignore  .gitmodules  .iwyu.imp  .jshintrc  .npmignore  .travis.yml  .valgrindrc  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  Gruntfile.js  LICENSE  LICENSE.md  Makefile  NodeJS.cmake  README  README.md  THIRD_PARTY_LICENSES.md  Vagrantfile  addon.js  appveyor.yml  azure-pipelines.yml  binding.gyp  build.js  datachannel.js  error.js  icecandidate.js  index.js  karma.conf.js  libs.txt  make-archives.py  mediastream.js  package-lock.json  package.json  peerconnection.js  spec  (+3 more)
.circleci/: config.yml
.github/workflows/: build-centos.yml  build-ubuntu.yml  build.yml
docs/: build-from-source.md  nonstandard-apis.md
etc/: g++-base.patch
example/: .eslintrc  README.md  index.js  package.json
example/html/: index.html
examples/: bridge.js  issue142.js  loopback.client.html  loopback.client.js  loopback.common.js  loopback.server.js  minimal-memory.js  nop.js  peer.html  peer.js  ping-pong-test.js  programmatic-video.client.html  programmatic-video.client.js  programmatic-video.server.js  sanity-test.js  test.html  test.js
examples/streamtest/: index.html  peerstream.js  webbridge.js
install/: node-pre-gyp-publish-github.js  publish.js
karma/: karma.conf.js  server.js
lib/: .gitignore  binding.js  browser.js  datachannel.js  datachannelevent.js  datachannelmessageevent.js  error.js  eventtarget.js  fileaudiodevicefactory.js  filemedia.js  getusermedia.js  icecandidate.js  icecandidateevent.js  index.d.ts  index.js  mediadevices.js  mediastream.js  mediastreamevent.js  mediastreammessageevent.js  mediastreamtrack.js  mediastreamtrackevent.js  peerconnection.js  rtcaudioframeevent.js  rtcaudiosink.js  rtcpeerconnectioniceerrorevent.js  rtcpeerconnectioniceevent.js  rtcstatsreport.js  rtcstatsresponse.js  rtcvideoframeevent.js  rtcvideosink.js  sessiondescription.js  voicemediachannel.js
npm/: package.json
patches/: RTCMTLRenderer.mm.patch  datachannel-extra-api.patch  external-linkage-support-ifdef.patch
phase-1/: CMakeLists.txt  package.json
scripts/: build-appveyor.bat  build-from-source.js  build-webrtc.bat  build-webrtc.sh  configure-webrtc.bat  configure-webrtc.sh  download-catch.js  download-prebuilt-or-build-from-source.js  download-prebuilt.js  download-webrtc-libraries-and-headers.js  download-webrtc.bat  download-webrtc.sh  install-example.js  install.js  karma.js  pack-webrtc.sh  patch-webrtc.bat  patch-webrtc.sh  publish-to-npm.js  publish.js  run-tests.bat  unpack-webrtc.sh
src/: addon.cc  asyncobjectwrap.cc  asyncobjectwrap.h  asyncobjectwrapwithloop.h  audiosink.cc  audiosink.h  backtrace.cc  backtrace.h  bidimap.h  binding.cc  common.h  converters.h  create-answer-observer.cc  create-answer-observer.h  create-offer-observer.cc  create-offer-observer.h  create-session-description-observer.cc  create-session-description-observer.h  createsessiondescriptionobserver.cc  createsessiondescriptionobserver.h  datachannel.cc  datachannel.h  decoderfactory.cc  decoderfactory.h  decoderproxy.cc  decoderproxy.h  error.h  errorfactory.cc  errorfactory.h  eventloop.h  eventqueue.h  events.cc  events.h  fileaudiodevicefactory.cc  fileaudiodevicefactory.h  filemedia.cc  filemedia.h  filemediaengine.cc  filemediaengine.h  getusermedia.cc  (+65 more)
src/converters/: absl.h  arguments.h  dictionaries.cc  dictionaries.h  enums.cc  enums.h  interfaces.cc  interfaces.h  macros.h  napi.cc  napi.h  null.cc  null.h  object.h  undefined.cc  undefined.h  v8.cc  v8.h  webrtc.cc  webrtc.h
src/dictionaries/: rtc_peer_connection_on_ice_error_event.h
src/events/: datachannel.cc  datachannel.h  datachannelevents.cc  datachannelevents.h  peerconnection.cc  peerconnection.h  peerconnectionevents.cc  peerconnectionevents.h  promise.h
src/fake_audio_device/: fake_audio_device.cc  fake_audio_device.h
src/functional/: curry.h  either.h  maybe.h  operators.h  validation.h
src/interfaces/: datachannel.cc  datachannel.h  legacy_rtc_stats_report.cc  legacy_rtc_stats_report.h  legacyrtcstatsreport.cc  legacyrtcstatsreport.h  media_stream.cc  media_stream.h  media_stream_track.cc  media_stream_track.h  mediastream.cc  mediastream.h  mediastreamtrack.cc  peerconnection.cc  peerconnection.h  rtc_audio_sink.cc  rtc_audio_sink.h  rtc_audio_source.cc  rtc_audio_source.h  rtc_data_channel.cc  rtc_data_channel.h  rtc_dtls_transport.cc  rtc_dtls_transport.h  rtc_ice_transport.cc  rtc_ice_transport.h  rtc_peer_connection.cc  rtc_peer_connection.h  rtc_rtp_receiver.cc  rtc_rtp_receiver.h  rtc_rtp_sender.cc  rtc_rtp_sender.h  rtc_rtp_transceiver.cc  rtc_rtp_transceiver.h  rtc_sctp_transport.cc  rtc_sctp_transport.h  rtc_stats_response.cc  rtc_stats_response.h  rtc_video_sink.cc  rtc_video_sink.h  rtc_video_source.cc  (+18 more)
src/methods/: get_display_media.cc  get_display_media.h  get_user_media.cc  get_user_media.h  i420_helpers.cc  i420_helpers.h
src/node/: async_context_releaser.cc  async_context_releaser.h  async_object_wrap.cc  async_object_wrap.h  async_object_wrap_with_loop.h  deferrer.cc  deferrer.h  error_factory.cc  error_factory.h  event_loop.h  event_queue.h  events.h  napi_async_object_wrap.h  napi_async_object_wrap_with_loop.h  napi_event_loop.h  promise.h  promise_fulfilling_event_loop.h  utility.h  wrap.h
src/utilities/: bidi_map.h
src/webrtc/: fake_audio_device.cc  fakeframesource.h  (+11 more)
test/: addicecandidate.js  all.js  bwtest-browser.html  bwtest.html  bwtest.js  closing-data-channel.js  closing-peer-connection.js  connect.js  cpp.js  create-offer.js  custom-settings.js  get-configuration.js  i420helpers.js  iceservers.js  latency.js  mediastream.js  multiconnect.js  pass-interface-to-method.js  rollback.js  rtcaudiosink.js  rtcaudiosource.js  rtcdatachannel.js  rtcdtlstransport.js  rtcrtpreceiver.js  rtcrtpsender.js  rtcvideosink-latency.js  rtcvideosink.js  rtcvideosource.js  send-arraybuffer.js  sessiondesc.js  simple-peer.js  util.js
tests/: bridge.js  peer.html  peer.js  peerconnection_wrapper.test.js  test.js
tools/: .gitignore
(+198 files in other folders)
